# proy_fnaf

./: README.md
custom_interface/: CMakeLists.txt  package.xml
my_first_service/: package.xml  setup.py
my_first_service/launch/: movement_server_launch.launch.py
my_first_service/my_first_service/: movement_server.py
my_nav2_system/: package.xml  setup.py
my_nav2_system/config/: my_nav2_params.yaml
my_nav2_system/launch/: my_nav2_system.launch.py  my_tb3_sim_nav2.launch.py
provide_map/: package.xml  setup.py
provide_map/launch/: provide_map.launch.py
provide_map/map/: my_map.pgm  my_map.yaml
proy_fnaf/: CMakeLists.txt  package.xml
proy_fnaf_custom_interface/: CMakeLists.txt  package.xml
proy_fnaf_my_nav2_system/: package.xml  setup.cfg  setup.py
proy_fnaf_my_nav2_system/config/: my_nav2_params.yaml
proy_fnaf_my_nav2_system/launch/: my_nav2_system.launch.py  my_tb3_sim_nav2.launch.py
proy_fnaf_my_nav2_system/proy_fnaf_my_nav2_system/: initial_pose_pub.py
proy_fnaf_my_service/: package.xml  setup.cfg  setup.py
proy_fnaf_my_service/launch/: movement_server_launch.launch.py
proy_fnaf_my_service/proy_fnaf_my_service/: movement_client.py  movement_server.py
proy_fnaf_my_world/: CMakeLists.txt  package.xml
proy_fnaf_my_world/launch/: turtlebot3_my_world.launch.py
proy_fnaf_my_world/world/: burger_pi.model
proy_my_nav2_system/: package.xml  setup.py
proy_my_slam/: package.xml  setup.py
proy_my_slam/launch/: my_slam.launch.py
proy_my_world/: CMakeLists.txt  package.xml
proy_provide_map/: setup.py
(+6 files in other folders)
