<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proy_fnaf</name>
  <version>0.0.0</version>
  <description>
  	ROS 2 packages for FNAF Project
  </description>
  <maintainer email="alejandronogbel@gmail.com">alumno</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>proy_my_world</exec_depend>
  <exec_depend>proy_my_slam</exec_depend>
  <exec_depend>proy_my_nav2_system</exec_depend>
  <exec_depend>my_nav2_system</exec_depend>
  <exec_depend>custom_interface</exec_depend>
  <exec_depend>provide_map</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
